src/objects/Som_KontaktberichtAccount__c.object
<CustomObject>
    <fields>
        <fullName>Som_Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>besprochene Accounts</relationshipLabel>
        <relationshipName>Account_Teilnehmer</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Som_Datum__c</fullName>
        <label>Datum</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Som_Kontaktbericht__c</fullName>
        <label>Kontaktbericht</label>
        <referenceTo>Som_Kontaktbericht__c</referenceTo>
        <relationshipLabel>besprochene Accounts</relationshipLabel>
        <relationshipName>Account_Teilnehmer</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>besprochener Account</label>
    <nameField>
        <displayFormat>ACT-{0}</displayFormat>
        <label>Account-Teilnehmer-Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>besprochene Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>